<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TemperatureConverter"
    android:orientation="vertical">

    <TextView
        android:text="@string/convert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11pt"/>

    <EditText
        android:id="@+id/temperature_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/convert_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/convert_from"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:text="@string/fahrenheit"
                    android:id="@+id/from_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:text="@string/celsius"
                    android:id="@+id/from_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:text="@string/kelvin"
                    android:id="@+id/from_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:text="@string/rankin"
                    android:id="@+id/from_rankin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/convert_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/convert_to"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:text="@string/fahrenheit"
                    android:id="@+id/to_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:text="@string/celsius"
                    android:id="@+id/to_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:text="@string/kelvin"
                    android:id="@+id/to_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:text="@string/rankin"
                    android:id="@+id/to_rankin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/convert_button"
        android:text="@string/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/conversion_solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/conversion_formula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
